--- a/insex.html
+++ b/insex.html
@@ -10,6 +10,8 @@
     <h1>hello Ivan</h1>
     <h2>Ivan Dobaiev</h2>
     <h3>lodcka</h3>
-        
+    <section>
+        Бул гур
+    </section>
 </body>
 </html>
